--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-body, html {
+* {
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  box-sizing: border-box;
+}
+
+body, html {
   height: 100%;
   background: radial-gradient(ellipse at bottom, #0d0d2b 0%, #000 100%);
+  overflow: hidden;
 }
 
 #stars {
@@ -13,4 +17,14 @@ body, html {
   width: 100%;
   height: 100%;
   pointer-events: none;
+  z-index: 0;
+}
+
+.star {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background: white;
+  border-radius: 50%;
+  opacity: 0.8;
 }
