--- a/style.css
+++ b/style.css
@@ -6,25 +6,19 @@
 
 body, html {
   height: 100%;
-  background: radial-gradient(ellipse at bottom, #0d0d2b 0%, #000 100%);
+  width: 100%;
   overflow: hidden;
 }
 
-#stars {
-  position: absolute;
+.background {
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  z-index: 0;
-}
-
-.star {
-  position: absolute;
-  width: 2px;
-  height: 2px;
-  background: white;
-  border-radius: 50%;
-  opacity: 0.8;
+  width: 110%; /* a bit larger for movement space */
+  height: 110%;
+  background-image: url('stars.jpg'); /* <-- update if your image name is different */
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+  transition: transform 0.1s ease-out;
 }
