--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@ html, body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 110%;           /* a little bigger than screen to allow movement */
-  height: 110%;
+  width: 120%;       /* increase from 110% */
+  height: 120%;
   object-fit: cover;
   z-index: -1;
   transition: transform 0.1s ease-out;
+  transform: translate(-10px, -10px); /* center the larger image better */
 }
+
